@@ -56,18 +56,18 @@
                             % if CertificateCA.is_trusted_root:
                                 <label class="label label-success">Y</label>
                             % endif
-                            % if CertificateCA.to_root_stores:
+                            % if CertificateCA.to_root_store_versions:
                                 <ul class="list list-unstyled">
-                                    % for to_root_store in CertificateCA.to_root_stores:
+                                    % for to_root_store_version in CertificateCA.to_root_store_versions:
                                         <li>
-                                            <a href="${admin_prefix}/root-store/${to_root_store.root_store.id}"
+                                            <a href="${admin_prefix}/root-store-version/${to_root_store_version.root_store_version.id}"
                                                class="label label-info"
                                             >
                                                 <span class="glyphicon glyphicon-file" aria-hidden="true"></span>
-                                                RootStore-${to_root_store.root_store.id}
+                                                RootStoreVersion-${to_root_store_version.root_store_version.id}
                                             </a>
-                                            <code>${to_root_store.root_store.name}</code>&nbsp;
-                                            <code>${to_root_store.root_store.version_string}</code>
+                                            <code>${to_root_store_version.root_store_version.root_store.name}</code>&nbsp;
+                                            <code>${to_root_store_version.root_store_version.version_string}</code>
                                         </li>
                                     % endfor
                                 </ul>
